--- a/PullToRefresh/app/src/main/AndroidManifest.xml
+++ b/PullToRefresh/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mayo.pulltorefresh" >
+<manifest package="com.mayo.pulltorefresh"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -15,7 +15,10 @@
         <activity
             android:name=".ActGrid"
             android:label="@string/title_activity_act_grid" >
-
+        </activity>
+        <activity
+            android:name=".ActLoadView"
+            android:label="@string/title_activity_act_load_view">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
